Closed Bug 1597453 Opened 5 years ago Closed 4 years ago

Fix uses of mozilla::dom::PerformanceTiming::IsTopLevelContentDocument in dom/performance/PerformanceTiming.cpp

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla74
Fission Milestone M6
Tracking Status
firefox74 --- fixed

People

(Reporter: djvj, Assigned: tetsuharu)

References

(Blocks 1 open bug)

Details

(Whiteboard: [rm-docshell-tree-item:simple])

Attachments

(1 file)

In file dom/performance/PerformanceTiming.cpp

Can effectively be refactored to be a wrapper around nsDocShell::IsTopLevelContentDocShell.

All uses of nsIDocShellTreeItem in this method should be done away by then.

There’s already a bug for DocShellTree work on “nsDocShell::IsTopLevelContentDocShell”:

Kannan says replacing nsIDocShellTreeItem calls should block enabling Fission in Nightly (M6).

Fission Milestone: --- → M6
Priority: -- → P3
Assignee: nobody → tetsuharu.ohzeki
Status: NEW → ASSIGNED
Pushed by tetsuharu.ohzeki@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/ce4e1638e472
Fix uses of nsIDocShellTreeItem in mozilla::dom::PerformanceTiming::IsTopLevelContentDocument. r=kmag
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: