Bug 1597453 - Fix uses of nsIDocShellTreeItem in mozilla::dom::PerformanceTiming::IsTopLevelContentDocument. r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D59454